# 3050A4

./: .clang-format  .gitignore  CMakeLists.txt  Makefile.Linux  Makefile.Windows  README.md  handItIn  recordManager.h  rm-db.c  rm-lockwrapper.c  rm-main.c
include/: os_defs.h  os_libsymbols.h
lib/: .gitignore
srcLockFile/: Makefile.Darwin  Makefile.Linux  Makefile.Windows  lockfile.c
srcLockRegion/: Makefile.Darwin  Makefile.Linux  Makefile.Windows  lockRegion.c
